fix for publish

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "deployer",
+  "name": "sol.d",
   "version": "1.0.0",
-  "description": "",
+  "description": "An ehtereum contracts deployer built on top of solc.js & web3.js.",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -9,10 +9,26 @@
   "scripts": {
     "deploy": "node index.js"
   },
-  "author": "",
+  "keywords": [
+    "blokchain",
+    "ethereum",
+    "solidity",
+    "compile",
+    "deploy"
+  ],
+  "author": "Tim",
   "license": "ISC",
   "dependencies": {
     "solc": "^0.4.17",
     "web3": "^0.19.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pplam/sold.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pplam/sold/issues"
+  },
+  "homepage": "https://github.com/pplam/sold#readme"
 }
